<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:name="csci5708.group10.seeker.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home" />

    <fragment android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:name="csci5708.group10.seeker.LibraryFragment"
        android:label="@string/Library"
        tools:layout="@layout/fragment_library" />
    <fragment android:id="@+id/navigation_add_book"
        android:icon="@drawable/feather_pen"
        android:name="csci5708.group10.seeker.AddBookFragment"
        android:label="@string/Add_Book"
        tools:layout="@layout/fragment_add_book" />
    <fragment android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:name="csci5708.group10.seeker.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings"/>
    <fragment android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:name="csci5708.group10.seeker.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />
<!--    <fragment-->
<!--        android:id="@+id/fragment_signup"-->
<!--        android:name="csci5708.group10.seeker.SignUpFragment"-->
<!--        android:label="@string/signup"-->
<!--        tools:layout="@layout/fragment_signup" />-->

</navigation>

